test/files/neg/badtok-2.check
badtok-2.scala:3: error: unterminated quoted identifier
`x
^
badtok-2.scala:3: error: '}' expected but eof found.
`x
 ^
two errors found
